--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,11 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} !=443
 RewriteRule ^(.*)$ https://tuskoelnmerkenich.de/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^www.tuskoelnmerkenich.de
+RewriteRule (.*) http://tuskoelnmerkenich.de/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^www.tuskoelnmerkenich.de
+RewriteRule (.*) https://tuskoelnmerkenich.de/$1 [R=301,L]
+RewriteCond %{HTTPS_HOST} ^www.tuskoelnmerkenich.de
+RewriteRule (.*) https://tuskoelnmerkenich.de/$1 [R=301,L]
+RewriteCond www.tuskoelnmerkenich.de
+RewriteRule (.*) https://tuskoelnmerkenich.de/$1 [R=301,L]
